--- a/frontend/index.html
+++ b/frontend/index.html
@@ -430,7 +430,8 @@
         <div class="flex justify-center items-center p-4 space-x-4">
           <div class="text-center">
             <button
-              type="submit"
+            id="generate"
+            type="button"
               class="p-2 bg-blue-600 text-white font-semibold rounded hover:bg-blue-700 focus:ring focus:ring-blue-300"
             >
               Generate Metadata
